<resources>
    <string name="app_name">Save me a spot</string>
    <string name="title_activity_maps_start">Map Overview</string>
    <string name="category_add_title">Please choose a category</string>
    <string name="name_spot">Name your Spot</string>
    <string name="add_description_tv">Spot description (optional)</string>
    <string name="show_on_map">Show on Map</string>
    <string name="delete_category">Delete category</string>
    <string name="delete_confirmation">Are you sure you want to delete</string>
    <string name="has_deleted">has been deleted.</string>
    <string name="delete_category_spots_included">Spots that are included in</string>
    <string name="category_spots_will_delete">will be deleted. Are you sure you want to proceed?</string>
    <string name="am_sure">I am sure</string>
    <string name="not_sure">No</string>
    <string name="cross_resource">Cross</string>
    <string name="name_spot_edit">Spot name</string>
    <string name="category">Category</string>
    <string name="in_category">In Category: </string>


    <!--Buttons-->
    <string name="button_menu_en">Menu</string>app:layout_constraintLeft_toLeftOf="parent"
    <string name="button_save_en">+</string>
    <string name="button_save_cancel">Cancel</string>
    <string name="button_save_next">Next</string>
    <string name="button_launch">Launch</string>
    <string name="category_add_new">Add new category</string>

    <!-- Titlar Berry-->
    <string-array name="titles_example_berry">
        <item>Bilberry</item>
        <item>Blackberry</item>
        <item>Blueberry</item>
        <item>Cloudberry</item>
        <item>Cranberry</item>
        <item>Elderberry</item>
        <item>Gooseberry</item>
        <item>Lingonberry</item>
        <item>Raspberry</item>
        <item>Strawberry</item>
    </string-array>


    <!-- Titlar Fruit-->
    <string-array name="titles_example_fruit">
        <item>Apple</item>
        <item>Apricot</item>
        <item>Cherry</item>
        <item>Grape</item>
        <item>Nectarine</item>
        <item>Peach</item>
        <item>Plum</item>
        <item>Pumpkin</item>
        <item>Orange</item>
        <item>Tomato</item>
    </string-array>

    <!-- Titlar Fish-->
    <string-array name="titles_example_fish">
        <item>Bream</item>
        <item>Carp</item>
        <item>Freshwater Eel</item>
        <item>Grayling</item>
        <item>Perch</item>
        <item>Peach</item>
        <item>Pike</item>
        <item>Roach</item>
        <item>Salmon</item>
        <item>Trout</item>
        <item>Zander</item>
    </string-array>

    <!-- Titlar Mushroom-->
    <string-array name="titles_example_mushroom">
        <item>Chanterelle</item>
        <item>Field Mushroom</item>
        <item>False Morel</item>
        <item>Funnel Chanterelle</item>
        <item>Hedgehog Mushroom</item>
        <item>Horse Mushroom</item>
        <item>Penny Bun</item>
        <item>Shaggy Ink Cap</item>
    </string-array>
    <string name="title_activity_category_spinner_adapter">CategorySpinnerAdapter</string>

</resources>
