<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/menuBackgroundColor">

    <TextView
        android:id="@+id/edit_spot_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/menuButtonColor"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="Edit Spot"
        android:textColor="@color/menuButtonTextColor"
        android:textSize="12pt" />

    <ImageButton
        android:id="@+id/edit_spot_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/edit_spot_text_view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerVertical="true"
        android:background="@color/menuButtonColor"
        android:src="@android:drawable/ic_menu_close_clear_cancel"

        />

    <TextView
        android:id="@+id/edit_spot_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_spot_text_view"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        android:text="@string/name_spot_edit" />

    <EditText
        android:id="@+id/edit_spot_title_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_spot_title_tv"
        android:layout_alignStart="@+id/edit_spot_title_tv"
        android:layout_below="@+id/edit_spot_title_tv"
        android:layout_marginTop="15dp"
        android:maxLength="15"
        android:focusable="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/edit_spot_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_spot_title_et"
        android:layout_alignStart="@+id/edit_spot_title_et"
        android:layout_below="@+id/edit_spot_title_et"
        android:layout_marginTop="37dp"
        android:text="@string/category"/>

    <Spinner
        android:id="@+id/spinner_edit_spot_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_spot_category_tv"
        android:layout_alignStart="@+id/edit_spot_category_tv"
        android:layout_below="@+id/edit_spot_category_tv"
        android:layout_marginTop="13dp"
        android:layout_toLeftOf="@+id/edit_spot_close_button"
        android:layout_toStartOf="@+id/edit_spot_close_button" />

    <TextView
        android:id="@+id/edit_spot_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_edit_spot_category"
        android:layout_alignStart="@+id/spinner_edit_spot_category"
        android:layout_below="@+id/spinner_edit_spot_category"
        android:layout_marginTop="44dp"
        android:text="@string/add_description_tv" />

    <EditText
        android:id="@+id/edit_spot_desc_et"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/edit_spot_desc_tv"
        android:layout_alignStart="@+id/edit_spot_desc_tv"
        android:layout_below="@+id/edit_spot_desc_tv"
        android:layout_marginTop="14dp"
        android:focusable="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="300" />

    <ImageButton
        android:id="@+id/save_edited_spot_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/edit_spot_desc_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/cross_resource"
        android:background="@drawable/roundbutton_save"
        android:src="@android:drawable/ic_menu_save" />


</RelativeLayout>